--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -187,5 +187,7 @@
 	"Edit start":"Start szerkesztése",
 	"Select":"Kiválaszt",
 	"Individual":"Egyéni induló",
-	"Profile":"Profil"
+	"Profile":"Profil",
+	"View starts":"Startok megtekintése",
+	"Users":"Felhasználók"
 }
