--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -189,5 +189,9 @@
 	"Individual":"Egyéni induló",
 	"Profile":"Profil",
 	"View starts":"Startok megtekintése",
-	"Users":"Felhasználók"
+	"Users":"Felhasználók",
+	"Display":"Kijelző",
+	"Display settings":"Kijelző beállítások",
+	"Name size":"Név mérerete",
+	"Point size":"Pontok mérete"
 }
