--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -193,5 +193,6 @@
 	"Display":"Kijelző",
 	"Display settings":"Kijelző beállítások",
 	"Name size":"Név mérerete",
-	"Point size":"Pontok mérete"
+	"Point size":"Pontok mérete",
+	"movement":"feladat"
 }
