--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -208,4 +208,11 @@
 	"Name of the sponsor":"Szponsor neve",
 	"Logo of the sponsor":"Szponsor logó",
 	"New sponsor":"Szponsor hozzáadása",
+	"Edit category":"Kategória szerkesztése",
+	"Reset category":"Kategória visszaállítása",
+	"Select a category":"Válassz kategóriát",
+	"New category name":"Új Kategória neve",
+	"First category":"Első kategória",
+	"Second category":"Második kategória"
+
 }
