--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -247,5 +247,7 @@
 	"Edit championship":"Szerkesztés",
 	"Last updated":"Utoljára frissítve",
 	"Championships":"Bajnokságok",
-	"Login as user":"Bejelentkezés felhasználóként"
+	"Login as user":"Bejelentkezés felhasználóként",
+	"Given mark":"Adott pont",
+	"Coefficient":"Szorzó"
 }
