pk ob jumping round

--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -249,5 +249,6 @@
 	"Championships":"Bajnokságok",
 	"Login as user":"Bejelentkezés felhasználóként",
 	"Given mark":"Adott pont",
-	"Coefficient":"Szorzó"
+	"Coefficient":"Szorzó",
+	"Time":"Idő"
 }
