--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -261,6 +261,8 @@
 	"Not eliminated!":"Nincs kizárva!",
 	"Style":"Stílus",
 	"Time fault":"Idő hiba",
-	"Obstacle fault":"Akadály hiba"
+	"Obstacle fault":"Akadály hiba",
+	"Active championships":"Aktív bajnokságok",
+	"Closed championships":"Lezárt bajnokságok"
 
 }
