start of the season update

--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -266,6 +266,8 @@
 	"Closed championships":"Lezárt bajnokságok",
 	"Rank":"Helyezés",
 	"Edit rounds":"Pályák szerkesztése",
-	"Jumping round":"Ugró pálya"
+	"Jumping round":"Ugró pálya",
+	"Not started":"Nem indul",
+	"Started after all":"Végül indul"
 
 }
