--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -280,6 +280,7 @@
 	"Given points":"Kapott pont",
 	"Add new start":"Új start hozzáadása",
 	"New start":"Új start",
-	"Image upload":"Kép feltöltése"
+	"Image upload":"Kép feltöltése",
+	"Start fee":"Startdíj"
 
 }
