--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -281,6 +281,8 @@
 	"Add new start":"Új start hozzáadása",
 	"New start":"Új start",
 	"Image upload":"Kép feltöltése",
-	"Start fee":"Startdíj"
+	"Start fee":"Startdíj",
+	"Rearrange Start List of":"Startlista rendezése",
+	"Save Order":"Lista mentése"
 
 }
