--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -287,7 +287,7 @@
 	"Payed amount":"Fizetett összeg",
 	"Finance":"Pénzügy",
 	"Did not pay":"Nem fizetett",
-	"Box fee":"Boxdíj",
+	"Box fees":"Boxdíj",
 	"Start total":"Össz startdíj",
 	"Box total":"Össz boxdíj",
 	"Transactions":"Tranzakciók"
