--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -69,7 +69,9 @@
 	"E-Mail address":"E-mail cím",
 	"Remember me":"Emlékezz rám",
 	"Forgot your password?":"Elfelejtette jelszavát?",
-
+	"Cross":"Terep",
+	"Show Jumping":"Díjugratás",
+    "Total faults":"Összhiba",
 	"View program":"Program megtekintése",
 	"Log in":"Bejelentkezés",
 	"Registration":"Regisztráció",
